# open-conference-url

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE.txt  Open Conference URL (Alfred 5).alfredworkflow  Open Conference URL.alfredworkflow  README.md  cache.py  event.py  get-event-uids.applescript  info.plist  list_events.py  mypy.ini  packager.json  prefs.json  prefs.py  pyproject.toml  queue_cache_refresh.applescript  refresh_cache.py  requirements.txt
.github/workflows/: lint.yml  release.yml  tests.yml
ocu/: cache.py  calendar.py  event.py  event_dict.py  get-calendar-events.applescript  icalBuddy  list_events.py  open_event.py  prefs.json  prefs.py  queue_cache_refresh.applescript  refresh_cache.py
ocu/calendars/: applescript_calendar.py  base_calendar.py  get-calendar-events.applescript  icalbuddy_calendar.py
tests/: .env.test  __init__.py  conftest.py  context_managers.py  decorators.py  test_base_calendar.py  test_data.json  test_icalbuddy.py  test_list_events.py  test_matching.py  test_open_event.py  utilities.py  utils.py
tests/icalbuddy_output/: all_day.txt  has_notes.txt  location_and_notes.txt  missing_times.txt  multiple_days.txt  multiple_days_all_day.txt  multiple_events.txt  notes_only.txt  single_day_all_day.txt  single_event.txt
tests/sample_events/: google-meet.json  location.json  meet.json  microsoft-teams.json  non-meeting.json  teams.json  zoom.json
tests/test_matching/: test_matching.py  test_teams.py  test_zoom.py
